<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.view.LoginActivity"
    android:background="@color/login_bg_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/login_radius_top_yellow"
        app:layout_constraintBottom_toTopOf="@+id/button_signIn_huawei_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_hello_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_hi"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.267"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />

        <ImageView
            android:id="@+id/imageView_user_picture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/textView_hello_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView_hello_user"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_baseline_account_box_96" />

        <TextView
            android:id="@+id/textView_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            app:layout_constraintBottom_toBottomOf="@+id/textView_hello_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView_hello_user"
            app:layout_constraintTop_toTopOf="@+id/textView_hello_user"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.huawei.hms.support.hwid.ui.HuaweiIdAuthButton
        android:id="@+id/button_signIn_huawei_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:hwid_button_theme="hwid_button_theme_full_title"
        app:hwid_color_policy="hwid_color_policy_black"
        app:hwid_corner_radius="hwid_corner_radius_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/login_radius_bottom_yellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_signIn_huawei_id">

        <TextView
            android:id="@+id/textView_welcome_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_welcome_to"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_30"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.35000002" />

        <TextView
            android:id="@+id/textView_login_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_30"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView_welcome_to"
            app:layout_constraintTop_toBottomOf="@+id/textView_welcome_to"
            app:layout_constraintVertical_bias="0.048" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>