<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_content_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/homepage_bg"
        android:visibility="visible"
        tools:context=".ui.home.view.HomeFragment">

        <Button
            android:id="@+id/buttonProfile"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/profile_menu"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/imageView_user_picture"
            app:layout_constraintTop_toTopOf="@+id/imageView_user_picture"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView_user_picture"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_baseline_account_box_96" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline8">

            <TextView
                android:id="@+id/favSongs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/favoriteSongs"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/searchView"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/searchView"
                app:layout_constraintTop_toBottomOf="@+id/searchView"
                app:layout_constraintVertical_bias="0.0" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fav_song_recyclerView"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="@dimen/margin_20"
                app:layout_constraintBottom_toTopOf="@+id/cameraButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/favSongs"
                app:layout_constraintTop_toBottomOf="@+id/favSongs"
                app:layout_constraintVertical_bias="0.0"
                tools:listitem="@layout/fav_song_card_view" />

            <ImageButton
                android:outlineSpotShadowColor="@color/login_bg_color"
                android:id="@+id/cameraButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/circle_camera_button"
                android:elevation="4dp"
                android:src="@drawable/ic_menu_camera"
                android:translationZ="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/home_radius_search_grey"
                android:elevation="4dp"
                android:gravity="center_vertical"
                android:iconifiedByDefault="false"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:outlineSpotShadowColor="@color/grey_400"
                android:queryHint="Search Here"
                android:translationZ="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <LinearLayout
                android:id="@+id/noDataView"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="@dimen/margin_20"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/cameraButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/favSongs"
                app:layout_constraintTop_toBottomOf="@+id/favSongs"
                app:layout_constraintVertical_bias="0.0"
                tools:listitem="@layout/fav_song_card_view">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/no_fav_icon" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center_horizontal"
                    android:text="@string/there_is_no_favorite_songs"
                    android:textColor="@color/hintTextColor"
                    android:textSize="@dimen/text_size_14" />

            </LinearLayout>

            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="50dp"
                android:background="@color/white"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/favSongs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/searchView"
                app:layout_constraintTop_toBottomOf="@+id/searchView"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textViewWeeklyMood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/weeklyMood"
            android:textColor="@color/black"
            android:textSize="21sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageView_user_picture"
            app:layout_constraintTop_toBottomOf="@+id/imageView_user_picture"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/moodType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewWeeklyMood"
            app:layout_constraintTop_toBottomOf="@+id/textViewWeeklyMood"
            app:layout_constraintVertical_bias="0.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

